# SimpleAccumulator

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  error_in_mean.txt
.github/workflows/: rust.yml
examples/: error_mean.rs  mean_converge.rs
src/: check.rs  lib.rs  main.rs
tests/: test_accumulator_fixed.rs  test_fixed_append.rs  test_histogram.rs  test_variance.rs
