[package]
name = "simple_accumulator"
version = "0.6.0"
edition = "2021"
authors = [
  "Sid <siddharth.naithani@subcom.tech>, Purnata G <purnata.g@subcom.tech>",
]
description = "A simple accumulator for incremental statistical computations"
repository = "https://github.com/SubconsciousCompute/SimpleAccumulator"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SubconsciousCompute/SimpleAccumulator"
keywords = ["accumulator", "statistics", "online-algorithms"]
documentation = "https://docs.rs/simple_accumulator"

[dependencies]
num = "0.4.1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"], optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dev-dependencies]
ordered-float = "4.2.0"
plotly = { version = "0.8.4" }
float_eq = { version = "1", features = ["derive"] }

[features]
serde = ["dep:serde"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
