[package]
name = "simple_accumulator"
version = "0.6.0"
edition = "2021"
authors = [
  "Sid <siddharth.naithani@subcom.tech>",
  "Purnata <purnata.g@subcom.tech>",
  "Dilawar <dilawar@subcom.tech>",
]
description = "A simple accumulator for incremental statistical computations"
repository = "https://github.com/SubconsciousCompute/SimpleAccumulator"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SubconsciousCompute/SimpleAccumulator"
keywords = ["accumulator", "statistics", "online-algorithms"]
documentation = "https://docs.rs/simple_accumulator"

[dependencies]
num-traits = "0.2.17"
rand = "0.8.5"
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1.40"
watermill = "0.1.1"
histogram = { version = "0.8.3", optional = true }


[dev-dependencies]
ordered-float = "4.2.0"
plotly = { version = "0.8.4" }
float_eq = { version = "1", features = ["derive"] }
watermill = "0.1.1"
tracing-test = "0.2.4"
histogram-sampler = "0.5.0"

[features]
default = ["histogram"]
serde = ["dep:serde"]
histogram = ["dep:histogram"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
